trunk/src/targets/uga/java/flipsTargetUGAParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 flipsTargetUGA.g 2010-06-06 02:02:40

  import java.nio.ByteBuffer;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class flipsTargetUGAParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "FLY", "LTR", "CMD", "PAR", "POS", "X", "FIX", "REL", "GEO", "Y", "Z", "ROL", "PIT", "YAW", "PRE", "VEL", "SPD", "AIR", "GND", "ACT", "ELE", "AIL", "RUD", "FLA", "THR", "PCT", "RPM", "TRI", "TIM", "RAD", "DIR", "L", "R", "CW", "CCW", "FloatingPointLiteral", "BinaryLiteral", "OctalLiteral", "DecimalLiteral", "HexLiteral", "Identifier", "StringLiteral", "Digit", "NonZeroDigit", "BinaryDigit", "HexDigit", "Exponent", "WS", "Comment", "LineComment", "'-'"
    };
    public static final int AIL=25;
    public static final int FIX=10;
    public static final int THR=28;
    public static final int FLA=27;
    public static final int SPD=20;
    public static final int OctalLiteral=41;
    public static final int AIR=21;
    public static final int LineComment=53;
    public static final int Exponent=50;
    public static final int YAW=17;
    public static final int PRE=18;
    public static final int EOF=-1;
    public static final int HexDigit=49;
    public static final int Identifier=44;
    public static final int ROL=15;
    public static final int TIM=32;
    public static final int T__54=54;
    public static final int Comment=52;
    public static final int POS=8;
    public static final int RAD=33;
    public static final int ELE=24;
    public static final int PAR=7;
    public static final int GEO=12;
    public static final int HexLiteral=43;
    public static final int ACT=23;
    public static final int GND=22;
    public static final int L=35;
    public static final int VEL=19;
    public static final int TRI=31;
    public static final int CMD=6;
    public static final int PIT=16;
    public static final int REL=11;
    public static final int R=36;
    public static final int Digit=46;
    public static final int DecimalLiteral=42;
    public static final int Y=13;
    public static final int X=9;
    public static final int CCW=38;
    public static final int Z=14;
    public static final int StringLiteral=45;
    public static final int CW=37;
    public static final int WS=51;
    public static final int FLY=4;
    public static final int RUD=26;
    public static final int LTR=5;
    public static final int DIR=34;
    public static final int NonZeroDigit=47;
    public static final int BinaryLiteral=40;
    public static final int BinaryDigit=48;
    public static final int FloatingPointLiteral=39;
    public static final int PCT=29;
    public static final int RPM=30;

    // delegates
    // delegators


        public flipsTargetUGAParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public flipsTargetUGAParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return flipsTargetUGAParser.tokenNames; }
    public String getGrammarFileName() { return "flipsTargetUGA.g"; }


          public ByteBuffer output = ByteBuffer.allocate(4096);

          public void emitByte(int value) {
            output.put((byte)value);
            System.out.println(value + " = " + Integer.toHexString(value).toUpperCase());
          }

          public void emitShort(int value) {
            output.putShort((short)value);
            System.out.println(value + " = " + Integer.toHexString(value).toUpperCase());
          }

          public void emitShort(int instruction, int value) {
            output.put((byte)instruction);
            output.putShort((short)value);
            System.out.println(value + " = " + Integer.toHexString(value).toUpperCase());
          }

          public void emitInt(int value) {
            output.putInt(value);
            System.out.println(value + " = " + Integer.toHexString(value).toUpperCase());
          }

          public void emit(int instruction) {
            emitByte(instruction);
          }

          public void emit(int instruction, double value) {
            output.put((byte)instruction);
            output.putFloat((float)value);
            System.out.print(Integer.toString(instruction) + " " + value);
            System.out.print(" = " + Integer.toHexString(instruction).toUpperCase() + " ");
            //long data = Double.doubleToRawLongBits(value);
            //System.out.print(Integer.toHexString((int)((data >> 56) & 0xFF)).toUpperCase() + " ");
            //System.out.print(Integer.toHexString((int)((data >> 48) & 0xFF)).toUpperCase() + " ");
            //System.out.print(Integer.toHexString((int)((data >> 40) & 0xFF)).toUpperCase() + " ");
            //System.out.print(Integer.toHexString((int)((data >> 32) & 0xFF)).toUpperCase() + " ");
            int data = Float.floatToRawIntBits((float)value);
            System.out.print(Integer.toHexString((int)((data >> 24) & 0xFF)).toUpperCase() + " ");
            System.out.print(Integer.toHexString((int)((data >> 16) & 0xFF)).toUpperCase() + " ");
            System.out.print(Integer.toHexString((int)((data >> 8) & 0xFF)).toUpperCase() + " ");
            System.out.print(Integer.toHexString((int)((data >> 0) & 0xFF)).toUpperCase());
            System.out.println();
          }
          
          public void reserveCharacters() {
            ByteBuffer buffer = ByteBuffer.allocate(4096);
            buffer.put(output.get(0));
            for (int i = 1; i < output.position() - 1; i++) {
                if (output.get(i) == (byte)0xAA) {
                    buffer.put((byte)0xCC);
                    buffer.put((byte)0x00);
                }
                else if (output.get(i) == (byte)0xCC) {
                    buffer.put((byte)0xCC);
                    buffer.put((byte)0x01);
                }
                else if (output.get(i) == (byte)0xFF) {
                    buffer.put((byte)0xCC);
                    buffer.put((byte)0x02);
                }
                else {
                    buffer.put(output.get(i));
                }
            }
            buffer.put(output.get(output.position() - 1));
            output = buffer;
        }



    // $ANTLR start "flightPlan"
    // flipsTargetUGA.g:109:1: flightPlan : ( instruction )* ;
    public final void flightPlan() throws RecognitionException {
        try {
            // flipsTargetUGA.g:110:2: ( ( instruction )* )
            // flipsTargetUGA.g:110:4: ( instruction )*
            {
            emitByte(0xAA);
            // flipsTargetUGA.g:111:3: ( instruction )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=FLY && LA1_0<=CMD)||LA1_0==POS||(LA1_0>=VEL && LA1_0<=SPD)||LA1_0==ACT||(LA1_0>=TRI && LA1_0<=DIR)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // flipsTargetUGA.g:111:3: instruction
            	    {
            	    pushFollow(FOLLOW_instruction_in_flightPlan44);
            	    instruction();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            emitByte(0xFF);
            reserveCharacters();
            output.flip();

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "flightPlan"


    // $ANTLR start "instruction"
    // flipsTargetUGA.g:117:1: instruction : ( fly | loiter | command | position | velocity | speed | actuator | trim | time | radius | direction );
    public final void instruction() throws RecognitionException {
        try {
            // flipsTargetUGA.g:118:2: ( fly | loiter | command | position | velocity | speed | actuator | trim | time | radius | direction )
            int alt2=11;
            switch ( input.LA(1) ) {
            case FLY:
                {
                alt2=1;
                }
                break;
            case LTR:
                {
                alt2=2;
                }
                break;
            case CMD:
                {
                alt2=3;
                }
                break;
            case POS:
                {
                alt2=4;
                }
                break;
            case VEL:
                {
                alt2=5;
                }
                break;
            case SPD:
                {
                alt2=6;
                }
                break;
            case ACT:
                {
                alt2=7;
                }
                break;
            case TRI:
                {
                alt2=8;
                }
                break;
            case TIM:
                {
                alt2=9;
                }
                break;
            case RAD:
                {
                alt2=10;
                }
                break;
            case DIR:
                {
                alt2=11;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // flipsTargetUGA.g:118:4: fly
                    {
                    pushFollow(FOLLOW_fly_in_instruction68);
                    fly();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // flipsTargetUGA.g:119:4: loiter
                    {
                    pushFollow(FOLLOW_loiter_in_instruction73);
                    loiter();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // flipsTargetUGA.g:120:4: command
                    {
                    pushFollow(FOLLOW_command_in_instruction78);
                    command();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // flipsTargetUGA.g:121:4: position
                    {
                    pushFollow(FOLLOW_position_in_instruction83);
                    position();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    // flipsTargetUGA.g:122:4: velocity
                    {
                    pushFollow(FOLLOW_velocity_in_instruction88);
                    velocity();

                    state._fsp--;


                    }
                    break;
                case 6 :
                    // flipsTargetUGA.g:123:4: speed
                    {
                    pushFollow(FOLLOW_speed_in_instruction93);
                    speed();

                    state._fsp--;


                    }
                    break;
                case 7 :
                    // flipsTargetUGA.g:124:4: actuator
                    {
                    pushFollow(FOLLOW_actuator_in_instruction98);
                    actuator();

                    state._fsp--;


                    }
                    break;
                case 8 :
                    // flipsTargetUGA.g:125:4: trim
                    {
                    pushFollow(FOLLOW_trim_in_instruction103);
                    trim();

                    state._fsp--;


                    }
                    break;
                case 9 :
                    // flipsTargetUGA.g:126:4: time
                    {
                    pushFollow(FOLLOW_time_in_instruction108);
                    time();

                    state._fsp--;


                    }
                    break;
                case 10 :
                    // flipsTargetUGA.g:127:4: radius
                    {
                    pushFollow(FOLLOW_radius_in_instruction113);
                    radius();

                    state._fsp--;


                    }
                    break;
                case 11 :
                    // flipsTargetUGA.g:128:4: direction
                    {
                    pushFollow(FOLLOW_direction_in_instruction118);
                    direction();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "instruction"


    // $ANTLR start "fly"
    // flipsTargetUGA.g:133:1: fly : FLY ;
    public final void fly() throws RecognitionException {
        try {
            // flipsTargetUGA.g:133:5: ( FLY )
            // flipsTargetUGA.g:133:7: FLY
            {
            match(input,FLY,FOLLOW_FLY_in_fly130); 
            emit(90);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "fly"


    // $ANTLR start "loiter"
    // flipsTargetUGA.g:135:1: loiter : LTR ;
    public final void loiter() throws RecognitionException {
        try {
            // flipsTargetUGA.g:135:8: ( LTR )
            // flipsTargetUGA.g:135:10: LTR
            {
            match(input,LTR,FOLLOW_LTR_in_loiter140); 
            emit(91);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "loiter"


    // $ANTLR start "command"
    // flipsTargetUGA.g:137:1: command : ( CMD x= integerValue | CMD PAR y= numericValue );
    public final void command() throws RecognitionException {
        int x = 0;

        double y = 0.0;


        try {
            // flipsTargetUGA.g:137:9: ( CMD x= integerValue | CMD PAR y= numericValue )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==CMD) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==PAR) ) {
                    alt3=2;
                }
                else if ( ((LA3_1>=BinaryLiteral && LA3_1<=HexLiteral)||LA3_1==54) ) {
                    alt3=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // flipsTargetUGA.g:137:11: CMD x= integerValue
                    {
                    match(input,CMD,FOLLOW_CMD_in_command150); 
                    pushFollow(FOLLOW_integerValue_in_command154);
                    x=integerValue();

                    state._fsp--;

                    emitShort(92,x);

                    }
                    break;
                case 2 :
                    // flipsTargetUGA.g:138:4: CMD PAR y= numericValue
                    {
                    match(input,CMD,FOLLOW_CMD_in_command161); 
                    match(input,PAR,FOLLOW_PAR_in_command163); 
                    pushFollow(FOLLOW_numericValue_in_command167);
                    y=numericValue();

                    state._fsp--;

                    emit(95,y);

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "command"


    // $ANTLR start "position"
    // flipsTargetUGA.g:143:1: position : ( POS X FIX x= numericValue | POS X REL x= numericValue | POS X GEO x= numericValue | POS Y FIX x= numericValue | POS Y REL x= numericValue | POS Y GEO x= numericValue | POS Z FIX x= numericValue | POS Z REL x= numericValue | POS ROL FIX x= numericValue | POS ROL REL x= numericValue | POS PIT FIX x= numericValue | POS PIT REL x= numericValue | POS YAW FIX x= numericValue | POS YAW REL x= numericValue | POS PRE FIX x= numericValue | POS PRE REL x= numericValue );
    public final void position() throws RecognitionException {
        double x = 0.0;


        try {
            // flipsTargetUGA.g:143:9: ( POS X FIX x= numericValue | POS X REL x= numericValue | POS X GEO x= numericValue | POS Y FIX x= numericValue | POS Y REL x= numericValue | POS Y GEO x= numericValue | POS Z FIX x= numericValue | POS Z REL x= numericValue | POS ROL FIX x= numericValue | POS ROL REL x= numericValue | POS PIT FIX x= numericValue | POS PIT REL x= numericValue | POS YAW FIX x= numericValue | POS YAW REL x= numericValue | POS PRE FIX x= numericValue | POS PRE REL x= numericValue )
            int alt4=16;
            alt4 = dfa4.predict(input);
            switch (alt4) {
                case 1 :
                    // flipsTargetUGA.g:143:11: POS X FIX x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position180); 
                    match(input,X,FOLLOW_X_in_position182); 
                    match(input,FIX,FOLLOW_FIX_in_position184); 
                    pushFollow(FOLLOW_numericValue_in_position188);
                    x=numericValue();

                    state._fsp--;

                    emit(1,x);

                    }
                    break;
                case 2 :
                    // flipsTargetUGA.g:144:4: POS X REL x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position195); 
                    match(input,X,FOLLOW_X_in_position197); 
                    match(input,REL,FOLLOW_REL_in_position199); 
                    pushFollow(FOLLOW_numericValue_in_position203);
                    x=numericValue();

                    state._fsp--;

                    emit(2,x);

                    }
                    break;
                case 3 :
                    // flipsTargetUGA.g:145:4: POS X GEO x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position210); 
                    match(input,X,FOLLOW_X_in_position212); 
                    match(input,GEO,FOLLOW_GEO_in_position214); 
                    pushFollow(FOLLOW_numericValue_in_position218);
                    x=numericValue();

                    state._fsp--;

                    emit(93,x);

                    }
                    break;
                case 4 :
                    // flipsTargetUGA.g:146:4: POS Y FIX x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position225); 
                    match(input,Y,FOLLOW_Y_in_position227); 
                    match(input,FIX,FOLLOW_FIX_in_position229); 
                    pushFollow(FOLLOW_numericValue_in_position233);
                    x=numericValue();

                    state._fsp--;

                    emit(3,x);

                    }
                    break;
                case 5 :
                    // flipsTargetUGA.g:147:4: POS Y REL x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position240); 
                    match(input,Y,FOLLOW_Y_in_position242); 
                    match(input,REL,FOLLOW_REL_in_position244); 
                    pushFollow(FOLLOW_numericValue_in_position248);
                    x=numericValue();

                    state._fsp--;

                    emit(4,x);

                    }
                    break;
                case 6 :
                    // flipsTargetUGA.g:148:4: POS Y GEO x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position255); 
                    match(input,Y,FOLLOW_Y_in_position257); 
                    match(input,GEO,FOLLOW_GEO_in_position259); 
                    pushFollow(FOLLOW_numericValue_in_position263);
                    x=numericValue();

                    state._fsp--;

                    emit(94,x);

                    }
                    break;
                case 7 :
                    // flipsTargetUGA.g:149:4: POS Z FIX x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position270); 
                    match(input,Z,FOLLOW_Z_in_position272); 
                    match(input,FIX,FOLLOW_FIX_in_position274); 
                    pushFollow(FOLLOW_numericValue_in_position278);
                    x=numericValue();

                    state._fsp--;

                    emit(5,x);

                    }
                    break;
                case 8 :
                    // flipsTargetUGA.g:150:4: POS Z REL x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position285); 
                    match(input,Z,FOLLOW_Z_in_position287); 
                    match(input,REL,FOLLOW_REL_in_position289); 
                    pushFollow(FOLLOW_numericValue_in_position293);
                    x=numericValue();

                    state._fsp--;

                    emit(6,x);

                    }
                    break;
                case 9 :
                    // flipsTargetUGA.g:151:4: POS ROL FIX x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position300); 
                    match(input,ROL,FOLLOW_ROL_in_position302); 
                    match(input,FIX,FOLLOW_FIX_in_position304); 
                    pushFollow(FOLLOW_numericValue_in_position308);
                    x=numericValue();

                    state._fsp--;

                    emit(7,x);

                    }
                    break;
                case 10 :
                    // flipsTargetUGA.g:152:4: POS ROL REL x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position315); 
                    match(input,ROL,FOLLOW_ROL_in_position317); 
                    match(input,REL,FOLLOW_REL_in_position319); 
                    pushFollow(FOLLOW_numericValue_in_position323);
                    x=numericValue();

                    state._fsp--;

                    emit(8,x);

                    }
                    break;
                case 11 :
                    // flipsTargetUGA.g:153:4: POS PIT FIX x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position330); 
                    match(input,PIT,FOLLOW_PIT_in_position332); 
                    match(input,FIX,FOLLOW_FIX_in_position334); 
                    pushFollow(FOLLOW_numericValue_in_position338);
                    x=numericValue();

                    state._fsp--;

                    emit(9,x);

                    }
                    break;
                case 12 :
                    // flipsTargetUGA.g:154:4: POS PIT REL x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position345); 
                    match(input,PIT,FOLLOW_PIT_in_position347); 
                    match(input,REL,FOLLOW_REL_in_position349); 
                    pushFollow(FOLLOW_numericValue_in_position353);
                    x=numericValue();

                    state._fsp--;

                    emit(10,x);

                    }
                    break;
                case 13 :
                    // flipsTargetUGA.g:155:4: POS YAW FIX x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position360); 
                    match(input,YAW,FOLLOW_YAW_in_position362); 
                    match(input,FIX,FOLLOW_FIX_in_position364); 
                    pushFollow(FOLLOW_numericValue_in_position368);
                    x=numericValue();

                    state._fsp--;

                    emit(11,x);

                    }
                    break;
                case 14 :
                    // flipsTargetUGA.g:156:4: POS YAW REL x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position375); 
                    match(input,YAW,FOLLOW_YAW_in_position377); 
                    match(input,REL,FOLLOW_REL_in_position379); 
                    pushFollow(FOLLOW_numericValue_in_position383);
                    x=numericValue();

                    state._fsp--;

                    emit(12,x);

                    }
                    break;
                case 15 :
                    // flipsTargetUGA.g:157:4: POS PRE FIX x= numericValue
                    {
                    match(input,POS,FOLLOW_POS_in_position390); 
                    match(input,PRE,FOLLOW_PRE_in_position392); 
                    match(input,FIX,FOLLOW_FIX_in_position394); 
                    pushFollow(FOLLOW_numericValue_in_position398);
                    x=numericValue();

                    state._fsp--;

                    emit(13,x);
